--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@revam/rollup-plugin-common",
   "description": "Revam's common tasks for rollup in a single plugin",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "license": "ISC",
   "author": "Mikal Stordal <mikalstordal@gmail.com>",
@@ -23,7 +23,9 @@
     "typescript"
   ],
   "dependencies": {
+    "magic-string": "^0.25.2",
     "read-pkg": "^4.0.1",
+    "rollup-pluginutils": "^2.6.0",
     "write-pkg": "^3.2.0"
   },
   "devDependencies": {
