--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@revam/rollup-plugin-common",
   "description": "Revam's common tasks for rollup in a single plugin",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "private": true,
   "license": "ISC",
   "author": "Mikal Stordal <mikalstordal@gmail.com>",
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.0.17",
-    "@types/node": "^11.9.5",
+    "@types/node": "12.12.12",
     "rollup": "1.27.4",
     "tslint": "^5.12.1",
     "typescript": "^3.4.3"
