--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@revam/rollup-plugin-common",
   "description": "Revam's common tasks for rollup in a single plugin",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "private": true,
   "license": "ISC",
   "author": "Mikal Stordal <mikalstordal@gmail.com>",
@@ -29,11 +29,11 @@
     "write-pkg": "^3.2.0"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.0.17",
+    "@microsoft/api-extractor": "7.6.2",
     "@types/node": "12.12.12",
     "rollup": "1.27.4",
-    "tslint": "^5.12.1",
-    "typescript": "^3.4.3"
+    "tslint": "5.20.1",
+    "typescript": "3.7.2"
   },
   "peerDependencies": {
     "rollup": "^1.21.0"
